# pakto

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  clippy.toml  deny.toml  health-check.sh  rustfmt.toml
.github/workflows/: ci.yml
examples/: basic_usage.rs  cli_demo.sh  pakto.toml
polyfills/: buffer.js  crypto.js  events.js  path.js  process.js  util.js
scripts/: test-real-packages.sh
src/: analyzer.rs  bundler.rs  cli.rs  config.rs  converter.rs  errors.rs  lib.rs  main.rs  npm.rs  output.rs  polyfills.rs  transformer.rs
templates/: outsystems.hbs
tests/: cli_tests.rs  integration.rs  integration_real.rs
