[package]
name = "pakto"
version = "0.1.0"
edition = "2024"
rust-version = "1.87.0"
authors = ["Rui Pedro Gomes"]
description = "Convert NPM packages to OutSystems-compatible JavaScript bundles"
documentation = "https://docs.rs/pakto"
repository = "https://github.com/rpgomes-code/pakto"
license = "MIT OR Apache-2.0"
keywords = ["npm", "outsystems", "javascript", "bundler", "converter"]
categories = ["command-line-utilities", "development-tools", "web-programming"]
exclude = [
    "tests/fixtures/*",
    "docs/*",
    ".github/*"
]

[dependencies]
# CLI framework
clap = { version = "4.5.40", features = ["derive", "env", "color"] }
clap_complete = "4.5.54"

# Error handling
anyhow = "1.0.98"
thiserror = "2.0.12"

# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }

# Async runtime
tokio = { version = "1.45.1", features = ["full"] }

# HTTP client for NPM registry
reqwest = { version = "0.12.20", features = ["json", "rustls-tls"], default-features = false }

# JSON handling
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

# JavaScript/TypeScript parsing and transformation
swc_core = { version = "28.0.0", features = ["ecma_parser", "ecma_ast", "ecma_transforms", "ecma_codegen"] }
swc_ecma_parser = "16.0.0"
swc_ecma_ast = "13.0.0"
swc_ecma_transforms = "21.0.0"
swc_ecma_codegen = "15.0.0"

# File system operations
walkdir = "2.5.0"
tempfile = "3.20.0"
dirs = "6.0.0"

# Progress indication
indicatif = "0.17.11"

# Colored terminal output
colored = "3.0.0"

# Configuration and TOML parsing
toml = "0.8.23"

# Template engine
handlebars = "6.3.2"

# Minification
minifier = "0.3.6"

# Semver parsing
semver = "1.0.26"

# URL parsing
url = "2.5.4"

# Regex
regex = "1.11.1"

# UUID generation
uuid = { version = "1.17.0", features = ["v4"] }

# Archive handling
flate2 = "1.1.2"
tar = "0.4.44"

# URL encoding
urlencoding = "2.1.3"
chrono = "0.4.41"

[dev-dependencies]
tokio-test = "0.4.4"
assert_cmd = "2.0.17"
predicates = "3.1.3"
tempfile = "3.20.0"
wiremock = "0.6.3"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = 2

[[bin]]
name = "pakto"
path = "src/main.rs"

[features]
default = []
experimental = []